# unicode_age

./: CONTRIBUTING.md  README.md  makeunicode_age.py  pyproject.toml  setup.py  test_unicode_age.py  unicode_age.pyx.in
.github/workflows/: build_wheels.yml
news/: 1.fixed.rst
src/: unicode_age.c  unicode_age.h  unicode_age.pyx
tests/: test_unicode_age.py
tools/: find_dangling_singletons.py
