[project]
name = "unicode_age"
version = "15.0.0"
description = "A package for determining what version a Unicode codepoint was added to the standard"
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest", "twine"]

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"
